WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83437
Command-line jsc's exception handling should be rationalized
https://bugs.webkit.org/show_bug.cgi?id=83437
Summary
Command-line jsc's exception handling should be rationalized
Filip Pizlo
Reported
2012-04-08 13:10:01 PDT
Currently it will swallow and ignore exceptions thrown during a run() execution. If a program terminates because of an exception, the exception is not printed by default. It is only printed if we enable bytecode dumping. It should be enabled always. The backtrace is never printed even though we almost always have one.
Attachments
the patch
(3.51 KB, patch)
2012-04-08 13:15 PDT
,
Filip Pizlo
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-04-08 13:15:58 PDT
Created
attachment 136156
[details]
the patch
mitz
Comment 2
2012-04-08 13:45:21 PDT
Comment on
attachment 136156
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=136156&action=review
> Source/JavaScriptCore/jsc.cpp:532 > if (dump) { > - if (evaluationException) > - printf("Exception: %s\n", evaluationException.toString(globalObject->globalExec())->value(globalObject->globalExec()).utf8().data()); > - else > + if (!evaluationException)
Now that there’s no else clause inside you can just write if (dump && !evaluationException)
Filip Pizlo
Comment 3
2012-04-08 13:46:19 PDT
(In reply to
comment #2
)
> (From update of
attachment 136156
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=136156&action=review
> > > Source/JavaScriptCore/jsc.cpp:532 > > if (dump) { > > - if (evaluationException) > > - printf("Exception: %s\n", evaluationException.toString(globalObject->globalExec())->value(globalObject->globalExec()).utf8().data()); > > - else > > + if (!evaluationException) > > Now that there’s no else clause inside you can just write > if (dump && !evaluationException)
Good point, thanks for the review!
Filip Pizlo
Comment 4
2012-04-08 13:51:21 PDT
Landed in
http://trac.webkit.org/changeset/113553
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug